# zed-crates-io

./: .gitignore  Cargo.toml  LICENSE  Readme.md  extension.toml
.github/workflows/: dist.yml
crates-io-lsp/: Cargo.toml
crates-io-lsp/src/: api.rs  main.rs
src/: lib.rs
