[package]
name = "crates-io-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.19"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
