[package]
name = "crates-io-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tower-lsp-server = "0.21"
tokio = { version = "1.45", features = ["full"] }
